# SimLagrange

./: .gitignore  CMakeLists.txt  README.md
Any/src/: Any.hpp
Any/tests/: mainTests.cpp
LWPLS/: README
LWPLS/src/: LWPLS.hpp
LWPLS/tests/: mainTests.cpp
LWPR/src/: LWPR.hpp  ReceptiveField.hpp
LWPR/tests/: mainTests.cpp
Model/: PassiveWalker.hpp  PassiveWalkerWithCam.hpp  PassiveWalkerWithKnee.hpp  testCamWalker.cpp
Model/models/: passive_walker_fixed_point.json  passive_walker_knee.json  passive_walker_knee2.json  passive_walker_knee_best_solution.json  passive_walker_knee_optim.json  passive_walker_knee_optim_Chen2005.json
Model/tests/: mainTests.cpp
Plot/src/: Plot.hpp
Plot/tests/: mainTests.cpp
Random/src/: Random.hpp
Random/tests/: mainTests.cpp
SimMecha/src/: AngularJoint.hpp  AngularSpring.hpp  Base.hpp  BinaryConstraint.hpp  Body.hpp  CamJoint.hpp  CamJointInverted.hpp  CamSpringJoint.hpp  CamSpringJointInverted.hpp  Constraint.hpp  FixedBase.hpp  FloatingBase.hpp  HeightUnaryConstraint.hpp  HeightUnaryContraint.hpp  Joint.hpp  LinearJoint.hpp  LinearSpring.hpp  RoundFoot.hpp  Simulation.h  System.hpp  UnaryConstraint.hpp
SimMecha/tests/: mainTests.cpp
SimViewer/src/: SimViewer.hpp
SimViewer/tests/: mainTests.cpp
Simulations/: KneeWalkerOptim.cpp  KneeWalkerOptimAll.cpp  KneeWalkerOptimEigen.cpp  RoundFeetWalkerGround.hpp  RoundFootOptim.cpp  SimpleWalkerGround.hpp  SimpleWalkerOptim.cpp  camTest.cpp  camTestSimple.cpp  camTestSpring.cpp  compassTest.cpp  roundFeetCompassTest.cpp  roundFootTest.cpp  springTest.cpp  testStability.cpp
SmartPointer/src/: ReferenceCounter.hpp  SmartPtr.hpp
SmartPointer/tests/: mainTests.cpp
SymOptim/src/: GradientDescent.hpp  PenaltyMethod.hpp
SymOptim/tests/: mainTests.cpp
Symbolic/: README
Symbolic/src/: BaseSymbol.hpp  BinaryFunction.hpp  Bounder.hpp  Constant.hpp  Symbol.hpp  Term.hpp  UnaryBase.hpp  UnaryFunction.hpp  UnaryOperator.hpp  terms.h
Symbolic/src/terms/: Add.hpp  Dot.hpp  Exp.hpp  Frac.hpp  Im.hpp  Minus.hpp  Mult.hpp  Polar.hpp  PolarInv.hpp  Pow.hpp  Re.hpp  Sub.hpp  X.hpp  Y.hpp
Symbolic/tests/: mainTests.cpp
Vector/src/: Vector2D.hpp
Vector/tests/: mainTests.cpp
VectorMap/src/: VectorMap.hpp
VectorMap/tests/: mainTests.cpp
tmpMechaSim/: FlyModel.hpp  Model.hpp  compile  main.cpp
